<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Sign_in_Activity"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputMail"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/input_background"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/input_background"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextFields" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:id="@+id/Button_Sign_In"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                />

            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Create_New_Account"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>