<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Sigin_Up_Activity"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/layoutImage"
            >
            
            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:id="@+id/imageProfile"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextAddImageProfile"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />


        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputName"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/input_background"
            android:hint="@string/name"
            android:textColorHint="@color/color_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputMail"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/input_background"
            android:hint="@string/email"
            android:textColorHint="@color/color_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/input_background"
            android:hint="@string/password"
            android:textColorHint="@color/color_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextFields" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputConfirmPassword"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/input_background"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/color_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextFields" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:id="@+id/Button_Sign_Up"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"
                />
            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSignIn"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_15sdp"/>

    </LinearLayout>

</ScrollView>